COMPX-22412. YARN-11796. Accept extra JDK 17 options in tests (#7512) Contributed by Istvan Toth.
Reviewed-by: Cheng Pan <chengpan@apache.org>
Signed-off-by: Shilun Fan <slfan1989@apache.org>